--- a/src/compo/card.css
+++ b/src/compo/card.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1.25rem;
+  /* gap: 1.25rem; */
 
   border-radius: 1rem;
   overflow: hidden;
@@ -74,6 +74,30 @@
   letter-spacing: 0.05em;
   font-size: 1.01rem;
   line-height: 1.4;
+}
+
+div[role="button"] {
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  z-index: 4;
+}
+
+/* layout */
+.anime {
+  /* opacity: 0.5; */
+  animation: wave 1s ease-in-out;
+}
+
+@keyframes wave {
+  0% {
+    left: 100%;
+  }
+  80% {
+    left: 40%;
+  }
+  100% {
+    left: 0%;
+  }
 }
 
 @media (min-width: 1024px) {
